tests/baselines/reference/mappedTypeTupleTypePropType.errors.txt
tests/cases/compiler/mappedTypeTupleTypePropType.ts(29,9): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/compiler/mappedTypeTupleTypePropType.ts(30,9): error TS2322: Type 'string | number' is not assignable to type 'number'.
  Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/mappedTypeTupleTypePropType.ts (2 errors) ====
    type Indices<T extends Array<any>> = {
      [K in keyof T]: K
    };
    
    // should contain numbers
    type MyIndices = Indices<[string, number]>;
    // union of indices should be preserved
    type StillMyIndices = MyIndices[number] & number
    
    // simplified repro from https://twitter.com/oleg008/status/1508422774401949704
    
    type Container<V> = {
      value: V;
    };
    
    type UnwrapContainers<T extends Container<unknown>[]> = {
      [K in keyof T]: T[K & number]["value"];
    };
    
    declare function combine<T extends Container<unknown>[]>(
      containers: [...T],
      callback: (...values: UnwrapContainers<T>) => void
    ): void;
    
    declare const container1: Container<string>;
    declare const container2: Container<number>;
    
    combine([container1, container2], (value1, value2) => {
      const val1: string = value1;
            ~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
      const val2: number = value2;
            ~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    });
    
    